# a2a-project

./: README.md
samples/a2a-python-sdk/: README.md  pyproject.toml  requirements.txt
samples/a2a-python-sdk/agents/weather_agent/: __main__.py  agent.py  agent_executor.py
samples/a2a-python-sdk/client/: client.py
samples/a2a-weather/: README.md  pyproject.toml  requirements.txt
samples/a2a-weather/client/: weather_client.py
samples/a2a-weather/server/: weather_server.py
